<resources>
    <string name="app_name">Accu News</string>
    <string name="server_error">Unexpected server error</string>
    <string name="error">Error</string>
    <string name="not_found">Not found</string>
    <string name="internet_connection_error">Internet connection error, please check your connection.</string>
    <string name="ok">OK</string>
    <string name="accu_news">Accu News</string>
    <string name="retry">Retry</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="apply">Apply</string>
    <string name="change_language">Change Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="opened">Opened</string>
    <string name="closed">Closed</string>
    <string name="news_country">News Country</string>
    <string name="page_size">Page Size: %s</string>
    <string name="launch_activity">Launch activity</string>
    <string name="settings">Settings</string>
    <string name="error_loading_Data">Error loading data</string>
    <string name="usa">USA</string>
    <string name="italy">Italy</string>
    <string name="france">France</string>
    <string name="india">India</string>
    <string name="russia">Russia</string>
    <string name="egypt">Egypt</string>
    <string name="kuwait">Kuwait</string>
    <string name="general">General</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="news_category">News Category</string>
    <string name="can_t_load">can\'t load the news feed due to an error</string>
    <string name="http401">"HTTP 401 "</string>
    <string name="please_check_the_apikey">\" please check the used APIkey\"</string>
    <string name="please_check_apikey_toast">Please check the internet connectivity or the use API key</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system">System</string>
    <string name="lbl_appTheme">Application theme</string>
</resources>