<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/setting_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/margin_16"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvtheme"
        style="@style/FourthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"

        tools:text="@string/lbl_appTheme" />

    <RadioGroup
        android:id="@+id/theme_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/rB_dark"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/dark" />

        <RadioButton
            android:id="@+id/rB_light"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/rB_system"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/system" />


    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNewsCountry"
        style="@style/FourthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"

        tools:text="@string/news_country" />

    <RadioGroup
        android:id="@+id/country_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <RadioButton
            android:id="@+id/rB_usa"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/usa" />

        <RadioButton
            android:id="@+id/rB_italy"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/italy"

            android:visibility="gone" />

        <RadioButton
            android:id="@+id/rB_france"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/france" />

        <RadioButton
            android:id="@+id/rB_india"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/india" />

        <RadioButton
            android:id="@+id/rB_egypt"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/egypt" />

        <RadioButton
            android:id="@+id/rB_kuwait"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kuwait"

            android:visibility="gone" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNewsCategory"
        style="@style/FourthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:text="@string/news_category" />

    <RadioGroup
        android:id="@+id/category_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <RadioButton
            android:id="@+id/rB_general"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"

            android:text="@string/general" />

        <RadioButton
            android:id="@+id/rB_business"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/business" />

        <RadioButton
            android:id="@+id/rB_entertainment"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/entertainment"

            android:visibility="gone" />

        <RadioButton
            android:id="@+id/rB_health"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/health" />

        <RadioButton
            android:id="@+id/rB_science"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/science"

            android:visibility="gone" />

        <RadioButton
            android:id="@+id/rB_sports"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/sports" />

        <RadioButton
            android:id="@+id/rB_technology"
            style="@style/FourthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/technology"

            android:visibility="gone" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btApply"
        style="@style/FirstButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:gravity="center"
        android:padding="@dimen/margin_8"
        android:text="@string/apply"
        android:textAllCaps="true"
        android:textColor="#FCE4EC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>
